Created Habit_Tracker mini component

--- a/Turtle_/src/app/app.component.html
+++ b/Turtle_/src/app/app.component.html
@@ -8,6 +8,7 @@
 <body>
   <!-- HEADER -->
   <app-header></app-header>
+  <app-habits></app-habits>
   <!-- MENU -->
   <!-- PAGE -->
   <!-- FOOTER -->
