:poop: Added input field for habit_name

--- a/Turtle_/src/app/components/habit-tracker/habit-tracker.component.html
+++ b/Turtle_/src/app/components/habit-tracker/habit-tracker.component.html
@@ -1,9 +1,8 @@
 
 <div class="gridcontainer">
     <div class="placeholder_for_habit">
-        <span>Header</span>
+        <span>{{habit_name}}</span>
         <div class="days" id="days">
-
         </div>
     </div>
 </div>
