Calendar component complet

--- a/Turtle_/src/app/components/habit-tracker/habit-tracker.component.html
+++ b/Turtle_/src/app/components/habit-tracker/habit-tracker.component.html
@@ -1,8 +1,9 @@
-
 <div class="gridcontainer">
     <div class="placeholder_for_habit">
-        <span>{{habit_name}}</span>
+      <div class="container" id="container">
         <div class="days" id="days">
+          <span>{{habit_name}} {{habit_id}}</span>
         </div>
+      </div>
     </div>
-</div>
+  </div>
