--- a/Turtle_/src/app/pages/habits/habits.component.html
+++ b/Turtle_/src/app/pages/habits/habits.component.html
@@ -2,5 +2,5 @@
     <input type="text" [(ngModel)]="habitName" placeholder="Place a name of new habit"/>
     <button (click)="addNewHabit(habitName)">Add new habit</button>
 </div>
-<app-habit-tracker
-[habit_name]="habit_name"></app-habit-tracker>
+
+<div #habitTrackerContainer></div>
