issue-002: correction DOM placing habit-tracker element

--- a/Turtle_/src/app/pages/habits/habits.component.html
+++ b/Turtle_/src/app/pages/habits/habits.component.html
@@ -3,4 +3,4 @@
     <button (click)="addNewHabit(habitName)">Add new habit</button>
 </div>
 
-<div #habitTrackerContainer></div>
+<div id="habitTrackerContainer" #habitTrackerContainer></div>
