added construct of the app, add global and local style added progress-bar component

--- a/Turtle_/src/app/app.component.html
+++ b/Turtle_/src/app/app.component.html
@@ -7,8 +7,9 @@
 </head>
 <body>
   <!-- HEADER -->
-  <app-header></app-header>
-  <app-habits></app-habits>
+  <!-- <app-header></app-header> -->
+  <!-- <app-habits></app-habits> -->
+  <app-home></app-home>
   <!-- MENU -->
   <!-- PAGE -->
   <!-- FOOTER -->
