--- a/Turtle_/src/app/app.component.css
+++ b/Turtle_/src/app/app.component.css
@@ -1,3 +1,12 @@
 *{
     font-family: 'Times New Roman', Times, serif;
 }
+app-header {
+    
+  }
+  
+  app-header  {
+    max-width: 1200px; /* Adjust as needed */
+    margin: 0 auto;
+  }
+  
