--- a/Turtle_/src/app/app.component.html
+++ b/Turtle_/src/app/app.component.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <!-- HEADER -->
+  <app-header></app-header>
   <!-- <app-header></app-header> -->
   <!-- <app-habits></app-habits> -->
   <app-home></app-home>
