--- a/Turtle_/src/app/components/header/header.component.html
+++ b/Turtle_/src/app/components/header/header.component.html
@@ -4,3 +4,15 @@
         <h1>Turtle</h1>
     </div>
 </header> -->
+<header>
+    <div class="logo">
+        <img src="../../../assets/logo_turtle.png">
+    </div>
+
+    <nav>
+
+    </nav>
+
+    <div class="theme-ex">
+    </div>
+</header>
