--- a/Turtle_/src/app/pages/home/home.component.html
+++ b/Turtle_/src/app/pages/home/home.component.html
@@ -4,3 +4,5 @@
 </app-progress-bar>
 
 <app-pomodoro-timer></app-pomodoro-timer>
+
+<app-habit-tracker [habit_id]="1" [habit_name]="'habit'" ></app-habit-tracker>
