added style for note component

--- a/Turtle_/src/app/app.component.css
+++ b/Turtle_/src/app/app.component.css
@@ -1,9 +1,8 @@
-*{
-    font-family: 'Times New Roman', Times, serif;
+@font-face {
+  font-family: 'Jost-regular';
+  src: url(/assets/Jost-VariableFont_wght.ttf);
 }
-app-header {
-    
-  }
+
   
   app-header  {
     max-width: 1200px; /* Adjust as needed */
