--- a/Turtle_/src/app/components/goal/goal.component.html
+++ b/Turtle_/src/app/components/goal/goal.component.html
@@ -1,1 +1,29 @@
-<p>goal works!</p>
+ <div class="goal" id="goal">
+        <div class="week-goal">
+          <table>
+            <thead>
+              <th>Habit</th>
+              <th>Mon</th>
+              <th>Tue</th>
+              <th>Wen</th>
+              <th>Thu</th>
+              <th>Fri</th>
+              <th>Sat</th>
+              <th>San</th>
+            </thead>
+            <tbody>
+              <tr>
+                <th>{{habit_name}}</th>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+                <td><input type="checkbox" /></td>
+              </tr>
+            </tbody>
+            <tr></tr>
+          </table>
+        </div>
+      </div>
