--- a/Turtle_/src/app/components/pomodoro-timer/pomodoro-timer.component.css
+++ b/Turtle_/src/app/components/pomodoro-timer/pomodoro-timer.component.css
@@ -2,14 +2,17 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    background-color: #555;
+    background-color: #2f2f2f;
     padding: 10px 0px;
     border-radius: 8px;
     width: 150px;
+    cursor: default;
+    font-family: 'Jost-regular';
+  
   }
   .clock-time {
     background-color: white;
-    padding: 10px;
+    padding: 8px;
     border: 2px solid white;
     border-radius: 8px;
   }
@@ -30,14 +33,22 @@
   }
   button {
     border-radius: 8px;
-    border: 0px solid;
+    border: 1px solid #2f2f2f;
     width: 60px;
     font-size: small;
     padding: 3px;
+    margin:5px;
+    font-family: 'Jost-regular';
   }
   button:hover {
-    background-color: #8AB753;
+    background-color: #7CB841;
     font-weight: 600;
     color: #fff;
+    cursor: pointer;
+  }
+  button:active{
+    background-color: #7CB841;
+    color: #fff;
+    cursor: pointer;
   }
   
