--- a/Turtle_/src/app/pages/home/home.component.html
+++ b/Turtle_/src/app/pages/home/home.component.html
@@ -6,3 +6,5 @@
 <app-pomodoro-timer></app-pomodoro-timer>
 
 <app-habit-tracker [habit_id]="1" [habit_name]="'habit'" ></app-habit-tracker>
+<app-goal [habit_name]="'sleep'"></app-goal>
+<app-note></app-note>
