--- a/Turtle_/src/app/components/habit-tracker/habit-tracker.component.html
+++ b/Turtle_/src/app/components/habit-tracker/habit-tracker.component.html
@@ -1,20 +1,20 @@
 <div class="gridcontainer">
-    <div class="placeholder_for_habit">
-      <div class="container" id="container">
-        <div class="days" id="days">
-          <span>{{habit_name}} {{habit_id}}</span>
-        </div>
-        <div class="days-grid">
-          @for(row of matrix.matrix; track row){
+  <div class="placeholder_for_habit">
+    <div class="container" id="container">
+      <div class="days" id="days">
+        <span>{{ habit_name }} {{ habit_id }}</span>
+      </div>
+      <div class="days-grid">
+        @for (row of matrix.matrix; track row) {
           <div class="row">
-            @for(cell of row; track cell){
-            <div class="square">
-              {{ cell.day !== -1 ? cell.day : '' }}
-            </div>
-          }
+            @for (cell of row; track cell) {
+              <div class="square">
+                {{ cell.day !== -1 ? cell.day : "" }}
+              </div>
+            }
           </div>
         }
-        </div>
       </div>
     </div>
   </div>
+</div>
