--- a/Turtle_/src/app/components/note/note.component.html
+++ b/Turtle_/src/app/components/note/note.component.html
@@ -1,12 +1,19 @@
 <div id="wrapper">
-
-	<form id="paper" method="get" action="">
-
-		<div id="margin">Title: <input id="title" type="text" name="title"></div>
-		<textarea placeholder="Enter something funny." id="text" name="text" rows="4" style="overflow: hidden; word-wrap: break-word; resize: none; height: 160px; "></textarea>  
-		<br>
-		<input id="button" type="submit" value="Create">
-		
-	</form>
-
+  <form id="paper" method="get" action="">
+    <div id="margin">Title: <input id="title" type="text" name="title" /></div>
+    <textarea
+      placeholder="Enter something funny."
+      id="text"
+      name="text"
+      rows="4"
+      style="
+        overflow: hidden;
+        word-wrap: break-word;
+        resize: none;
+        height: 160px;
+      "
+    ></textarea>
+    <br />
+    <input id="button" type="submit" value="Create" />
+  </form>
 </div>
