--- a/Turtle_/src/app/pages/home/home.component.html
+++ b/Turtle_/src/app/pages/home/home.component.html
@@ -1,11 +1,8 @@
-
-<app-progress-bar>
-    
-</app-progress-bar>
+<app-progress-bar> </app-progress-bar>
 
 <app-pomodoro-timer></app-pomodoro-timer>
 
-<app-habit-tracker [habit_id]="1" [habit_name]="'habit'" ></app-habit-tracker>
+<app-habit-tracker [habit_id]="1" [habit_name]="'habit'"></app-habit-tracker>
 <app-goal [habit_name]="'sleep'"></app-goal>
 <app-note></app-note>
 <app-todo></app-todo>
