--- a/Turtle_/src/app/app.component.html
+++ b/Turtle_/src/app/app.component.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{title}}</title>
-</head>
-<body>
-  <!-- HEADER -->
-  <app-header></app-header>
-  <!-- <app-header></app-header> -->
-  <!-- <app-habits></app-habits> -->
-  <app-home></app-home>
-  <!-- MENU -->
-  <!-- PAGE -->
-  <!-- FOOTER -->
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>{{ title }}</title>
+  </head>
+  <body>
+    <!-- HEADER -->
+    <app-header></app-header>
+    <app-header></app-header>
+    <!-- <app-habits></app-habits> -->
+    <app-home></app-home>
+    <!-- MENU -->
+    <!-- PAGE -->
+    <!-- FOOTER -->
+  </body>
 </html>
