--- a/Turtle_/src/app/components/habit-tracker/habit-tracker.component.css
+++ b/Turtle_/src/app/components/habit-tracker/habit-tracker.component.css
@@ -1,56 +1,54 @@
 @font-face {
-    font-family: 'Jost-regular';
-    src: url(../../../assets/Jost-VariableFont_wght.ttf);
+  font-family: "Jost-regular";
+  src: url(../../../assets/Jost-VariableFont_wght.ttf);
 }
-.days{
-    display: flex;
-    flex-direction: row;
-    font-size: 16px;
+.days {
+  display: flex;
+  flex-direction: row;
+  font-size: 16px;
+}
+.gridcontainer {
+  border-radius: 6px;
+  width: fit-content;
+  padding: 3px 5px;
+  background-color: #2f2f2f;
+  font-size: 6px;
+  color: #d9d9d9;
+  /* color: #8AB753; */
+  font-family: "Jost-regular";
+}
 
-}
-.gridcontainer{
-    border-radius: 6px;
-    width: fit-content;
-    padding: 3px 5px;
-    background-color:#2f2f2f;
-    font-size: 6px;
-    color: #D9D9D9;
-    /* color: #8AB753; */
-    font-family: 'Jost-regular'
-}
-
-.days-grid{
-    display: block;
+.days-grid {
+  display: block;
 }
 .days-grid {
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
-  }
-  
-  .row {
-    display: flex;
-    gap: 4px;
-  }
-  
-  .square {
-    width: 20px;
-    height: 20px;
-    background-color: #d2d2d2;
-    border-radius: 3px;
-    box-shadow: inset -1px 4px 2px -3px rgba(0, 0, 0, 0.63);
-    text-align: center;
-    line-height: 20px;
-    font-size: 12px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .square:hover {
-    background-color: #7CB841;
-  }
-  
-  .square:active {
-    background-color: #7CB841;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.row {
+  display: flex;
+  gap: 4px;
+}
+
+.square {
+  width: 20px;
+  height: 20px;
+  background-color: #d2d2d2;
+  border-radius: 3px;
+  box-shadow: inset -1px 4px 2px -3px rgba(0, 0, 0, 0.63);
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.square:hover {
+  background-color: #7cb841;
+}
+
+.square:active {
+  background-color: #7cb841;
+}
