--- a/Turtle_/src/app/components/header/header.component.css
+++ b/Turtle_/src/app/components/header/header.component.css
@@ -1,37 +1,34 @@
-.logo{
-    height: 5vh;
-    width: 30%;
-    align-content: center;
-    padding-left: 18px;
+.logo {
+  height: 5vh;
+  width: 30%;
+  align-content: center;
+  padding-left: 18px;
 }
-img{
-    width: 35px;
+img {
+  width: 35px;
 }
 
-header{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #1E1E1E;
-    height: 5vh;
-    width: 100%;
-    margin: 0;
+header {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #1e1e1e;
+  height: 5vh;
+  width: 100%;
+  margin: 0;
 }
-.theme-ex{
-    position: absolute;
+.theme-ex {
+  position: absolute;
   top: 50%;
   left: 50%;
   overflow: hidden;
   padding: 0 200px;
   transform: translate3d(-50%, -50%, 0);
-  
+
   input {
     position: absolute;
     left: -99em;
   }
 }
-
-  
-  
