--- a/Turtle_/src/app/components/header/header.component.html
+++ b/Turtle_/src/app/components/header/header.component.html
@@ -5,14 +5,11 @@
     </div>
 </header> -->
 <header>
-    <div class="logo">
-        <img src="../../../assets/logo_turtle.png">
-    </div>
+  <div class="logo">
+    <img src="../../../assets/logo_turtle.png" />
+  </div>
 
-    <nav>
+  <nav></nav>
 
-    </nav>
-
-    <div class="theme-ex">
-    </div>
+  <div class="theme-ex"></div>
 </header>
