--- a/Turtle_/src/app/components/pomodoro-timer/pomodoro-timer.component.css
+++ b/Turtle_/src/app/components/pomodoro-timer/pomodoro-timer.component.css
@@ -1,54 +1,52 @@
 .clock {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    background-color: #2f2f2f;
-    padding: 10px 0px;
-    border-radius: 8px;
-    width: 150px;
-    cursor: default;
-    font-family: 'Jost-regular';
-  
-  }
-  .clock-time {
-    background-color: white;
-    padding: 8px;
-    border: 2px solid white;
-    border-radius: 8px;
-  }
-  span {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    font-weight: bolder;
-    color: #fff;
-  }
-  .timer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .btn-clock {
-    padding: 3px 3px;
-  }
-  button {
-    border-radius: 8px;
-    border: 1px solid #2f2f2f;
-    width: 60px;
-    font-size: small;
-    padding: 3px;
-    margin:5px;
-    font-family: 'Jost-regular';
-  }
-  button:hover {
-    background-color: #7CB841;
-    font-weight: 600;
-    color: #fff;
-    cursor: pointer;
-  }
-  button:active{
-    background-color: #7CB841;
-    color: #fff;
-    cursor: pointer;
-  }
-  
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  background-color: #2f2f2f;
+  padding: 10px 0px;
+  border-radius: 8px;
+  width: 150px;
+  cursor: default;
+  font-family: "Jost-regular";
+}
+.clock-time {
+  background-color: white;
+  padding: 8px;
+  border: 2px solid white;
+  border-radius: 8px;
+}
+span {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-weight: bolder;
+  color: #fff;
+}
+.timer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.btn-clock {
+  padding: 3px 3px;
+}
+button {
+  border-radius: 8px;
+  border: 1px solid #2f2f2f;
+  width: 60px;
+  font-size: small;
+  padding: 3px;
+  margin: 5px;
+  font-family: "Jost-regular";
+}
+button:hover {
+  background-color: #7cb841;
+  font-weight: 600;
+  color: #fff;
+  cursor: pointer;
+}
+button:active {
+  background-color: #7cb841;
+  color: #fff;
+  cursor: pointer;
+}
