--- a/Turtle_/src/app/components/progress-bar/progress-bar.component.css
+++ b/Turtle_/src/app/components/progress-bar/progress-bar.component.css
@@ -7,38 +7,38 @@
   cursor: pointer;
   animate: 0.2s;
   border: 0px solid #000000;
-  }
-  input[type=range]::-ms-thumb {
-    margin-top: 1px;
-    box-shadow: 0.75px 0.75px 0.75px #000000;
-    border: 0.5px solid #000000;
-    height: 15px;
-    width: 12px;
-    border-radius: 3px;
-    background: #FFFFFF;
-    cursor: pointer;
-  }
-  input[type=range]::-moz-range-thumb {
-    box-shadow: 0.75px 0.75px 0.75px #000000;
-    border: 0.5px solid #07010100;
-    height: 15px;
-    width: 12px;
-    border-radius: 10px;
-    background: #FFFFFF;
-    cursor: pointer;
-  }
-  input[type=range]::-webkit-slider-thumb {
-    box-shadow: 0.75px 0.75px 0.75px #000000;
+}
+input[type="range"]::-ms-thumb {
+  margin-top: 1px;
+  box-shadow: 0.75px 0.75px 0.75px #000000;
   border: 0.5px solid #000000;
   height: 15px;
   width: 12px;
   border-radius: 3px;
-  background: #FFFFFF;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type="range"]::-moz-range-thumb {
+  box-shadow: 0.75px 0.75px 0.75px #000000;
+  border: 0.5px solid #07010100;
+  height: 15px;
+  width: 12px;
+  border-radius: 10px;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type="range"]::-webkit-slider-thumb {
+  box-shadow: 0.75px 0.75px 0.75px #000000;
+  border: 0.5px solid #000000;
+  height: 15px;
+  width: 12px;
+  border-radius: 3px;
+  background: #ffffff;
   cursor: pointer;
   -webkit-appearance: none;
   margin-top: -2px;
 }
 
-span{
+span {
   margin: 5px;
 }
