--- a/Turtle_/src/app/components/progress-bar/progress-bar.component.html
+++ b/Turtle_/src/app/components/progress-bar/progress-bar.component.html
@@ -3,33 +3,32 @@
     aria - provide infomration about element
     states - current condition of UI component
 -->
-    <div class="container">
-        <input type="range" min="0" max="100" id="range_input"
-        [(ngModel)]="this.current_progress" 
-        (input)="updateProgress(this.current_progress)"
-        />
-        @if(this.emojiSettings){
-            @if(this.current_progress < 20){
-                <span>🐣</span>
-            }
-            @if(this.current_progress >= 20 && this.current_progress < 40){
-                <span>🐒</span>
-            } 
-            @if(this.current_progress >= 40 && this.current_progress < 60){ 
-                <span>🦁</span>
-            }
-            @if(this.current_progress >= 60 && this.current_progress < 80){   
-                <span>🐢</span>
-            }
-            @if(this.current_progress >= 80){
-                <span>🦖</span>
-            }
-        }@else {
-            <span>{{this.current_progress}} %</span>
-        }
-             
-                
-             
-    </div>
-    
-
+<div class="container">
+  <input
+    type="range"
+    min="0"
+    max="100"
+    id="range_input"
+    [(ngModel)]="this.current_progress"
+    (input)="updateProgress(this.current_progress)"
+  />
+  @if (this.emojiSettings) {
+    @if (this.current_progress < 20) {
+      <span>🐣</span>
+    }
+    @if (this.current_progress >= 20 && this.current_progress < 40) {
+      <span>🐒</span>
+    }
+    @if (this.current_progress >= 40 && this.current_progress < 60) {
+      <span>🦁</span>
+    }
+    @if (this.current_progress >= 60 && this.current_progress < 80) {
+      <span>🐢</span>
+    }
+    @if (this.current_progress >= 80) {
+      <span>🦖</span>
+    }
+  } @else {
+    <span>{{ this.current_progress }} %</span>
+  }
+</div>
