--- a/Turtle_/src/app/components/todo/todo.component.css
+++ b/Turtle_/src/app/components/todo/todo.component.css
@@ -1,56 +1,55 @@
 .body {
-    display: flex;
-    flex-direction: row;
-    padding: 10px;
-    margin: 10px;
-    width: max-content;
-  }
-  
-  .todo_ {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    border-radius: 8px;
-    border: 2px solid #404040;
-    margin: 10px;
-    width: 200px;
-    word-wrap: break-word;
-    padding: 10px;
-    background-color: #404040;
-  }
-  
-  ul li {
-    list-style-type: none;
-    background-color: #EAEAEA;
-    margin: 5px 0;
-    padding: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  ul li.dragging {
-    opacity: 0.5;
-  }
-  
-  ul {
-    padding: 5px;
-    margin: 0;
-  }
-  
-  h5 {
-    margin: 5px 8px;
-    font-size: small;
-    color: white;
-  }
-  .todo_ ul {
-    border: 1px dashed transparent;
-    min-height: 50px; 
-    padding: 10px;
-    transition: border-color 0.3s;
-  }
-  
-  .todo_ ul.drag-over {
-    border-color: #404040;
-    box-shadow: 2px 2px #404040; 
-  }
-  
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  margin: 10px;
+  width: max-content;
+}
+
+.todo_ {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  border-radius: 8px;
+  border: 2px solid #404040;
+  margin: 10px;
+  width: 200px;
+  word-wrap: break-word;
+  padding: 10px;
+  background-color: #404040;
+}
+
+ul li {
+  list-style-type: none;
+  background-color: #eaeaea;
+  margin: 5px 0;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+ul li.dragging {
+  opacity: 0.5;
+}
+
+ul {
+  padding: 5px;
+  margin: 0;
+}
+
+h5 {
+  margin: 5px 8px;
+  font-size: small;
+  color: white;
+}
+.todo_ ul {
+  border: 1px dashed transparent;
+  min-height: 50px;
+  padding: 10px;
+  transition: border-color 0.3s;
+}
+
+.todo_ ul.drag-over {
+  border-color: #404040;
+  box-shadow: 2px 2px #404040;
+}
