--- a/Turtle_/src/app/pages/home/home.component.css
+++ b/Turtle_/src/app/pages/home/home.component.css
@@ -1,7 +1,7 @@
 @font-face {
-    font-family: 'Jost-regular';
-    src: url(../../../assets/Jost-VariableFont_wght.ttf);
+  font-family: "Jost-regular";
+  src: url(../../../assets/Jost-VariableFont_wght.ttf);
 }
-body{
-    font-family: 'Jost-regular'
+body {
+  font-family: "Jost-regular";
 }
