create router & welcome component

--- a/Turtle_/src/app/app.component.css
+++ b/Turtle_/src/app/app.component.css
@@ -1,9 +1,10 @@
 @font-face {
   font-family: "Jost-regular";
-  src: url(/assets/Jost-VariableFont_wght.ttf);
+  src: url(../assets/Jost-VariableFont_wght.ttf);
 }
 
 app-header {
-  max-width: 1200px; /* Adjust as needed */
+  max-width: 1200px;
   margin: 0 auto;
 }
+
