--- a/Turtle_/src/app/app.component.html
+++ b/Turtle_/src/app/app.component.html
@@ -6,11 +6,14 @@
     <title>{{ title }}</title>
   </head>
   <body>
+    <router-outlet></router-outlet>
+    <a routerLink="/habits"></a>
+    <a routerLink="/"></a>
+    <!-- <app-welcome></app-welcome> -->
     <!-- HEADER -->
-    <app-header></app-header>
-    <app-header></app-header>
+    <!-- <app-header></app-header> -->
     <!-- <app-habits></app-habits> -->
-    <app-home></app-home>
+    <!-- <app-home></app-home> -->
     <!-- MENU -->
     <!-- PAGE -->
     <!-- FOOTER -->
