--- a/Turtle_/src/app/pages/welcome/welcome.component.html
+++ b/Turtle_/src/app/pages/welcome/welcome.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <app-loader [isLoading]="this.isLoading"></app-loader>
     <div class="content">
         <div class="logo-container">
              <img src="../../../assets/logo_turtle.png" />
