--- a/Turtle_/src/app/pages/welcome/welcome.component.html
+++ b/Turtle_/src/app/pages/welcome/welcome.component.html
@@ -7,6 +7,6 @@
         </div>
      <p>Slow and steady wins the race!<br>
         Turtle is your trusty companion to organize your life <br>and boost productivity, helping you achieve your <br>goals—one small step at a time.</p>
-        <button>Ready? &rarr;</button>
+        <button class="redirect" (click)="toHomePage()" data-hover="Go Go Go!" data-content="Ready? &rarr;"></button>
     </div>
 </div>
