added grid on home page and header (redesing in process)

--- a/Turtle_/src/app/components/header/header.component.html
+++ b/Turtle_/src/app/components/header/header.component.html
@@ -9,7 +9,13 @@
     <img src="../../../assets/logo_turtle.png" />
   </div>
 
-  <nav></nav>
+  <nav>
+    <ul>
+      <li>Home</li>
+      <li>Habits</li>
+      <li>Notes</li>
+    </ul>
+  </nav>
 
   <div class="theme-ex"></div>
 </header>
