--- a/Turtle_/src/app/app.component.css
+++ b/Turtle_/src/app/app.component.css
@@ -1,10 +1,32 @@
-@font-face {
-  font-family: "Jost-regular";
-  src: url(../assets/Jost-VariableFont_wght.ttf);
-}
-
 app-header {
   max-width: 1200px;
   margin: 0 auto;
 }
 
+@font-face {
+  font-family: 'Jost';
+  src: url('/assets/fonts/Jost-VariableFont_wght.woff2') format('woff2'),
+  url('/assets/fonts/Jost-VariableFont_wght.woff') format('woff'),
+  url('/assets/fonts/Jost-VariableFont_wght.ttf') format('truetype');
+  font-display: swap;
+}
+
+:host {
+  display: block;
+/* Full viewport */ 
+  height: 100vh; 
+  width: 100vw; 
+  background-color: #1E1E1E; 
+  position: absolute;
+  top: 0; 
+  left: 0; 
+  z-index: -1; 
+}
+
+.container {
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  width: 100%; 
+  height: 100%; 
+}
