--- a/Turtle_/src/app/components/header/header.component.css
+++ b/Turtle_/src/app/components/header/header.component.css
@@ -1,6 +1,16 @@
+:host {
+  display: block;
+/* Full viewport */ 
+  height: 100vh; 
+  width: 100vw; 
+  background-color: #1E1E1E; 
+  position: absolute;
+  top: 0; 
+  left: 0; 
+  z-index: -1; 
+}
+
 .logo {
-  height: 5vh;
-  width: 30%;
   align-content: center;
   padding-left: 18px;
 }
@@ -11,11 +21,9 @@ img {
 header {
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
   align-items: center;
-  background-color: #1e1e1e;
-  height: 5vh;
+  background-color: #fcfcfc6b;
+  height: 80px;
   width: 100%;
   margin: 0;
 }
@@ -31,4 +39,15 @@ header {
     position: absolute;
     left: -99em;
   }
+}
+
+ul{
+  display: flex;
+  flex-direction: row;
+  padding: 15px;
+}
+
+ul li{
+  margin: 10px;
+  list-style: none;
 }
