--- a/Turtle_/src/app/pages/habits/habits.component.css
+++ b/Turtle_/src/app/pages/habits/habits.component.css
@@ -2,6 +2,18 @@
   font-family: "Jost-regular";
   src: url(../../../assets/Jost-VariableFont_wght.ttf);
 }
-body {
-  font-family: "Jost-regular";
+input{
+  width: 130px;
+}
+input::placeholder{
+  font-style: italic;
+  font-size: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+input:focus{
+  text-align: start;
+  font-size: 12px;
+  font-weight: 600;
+  font-style: normal;
 }
