--- a/Turtle_/src/app/pages/home/home.component.html
+++ b/Turtle_/src/app/pages/home/home.component.html
@@ -1,8 +1,15 @@
-<app-progress-bar> </app-progress-bar>
+<!-- <app-progress-bar> </app-progress-bar>
 
 <app-pomodoro-timer></app-pomodoro-timer>
 
 <app-habit-tracker [habit_id]="1" [habit_name]="'habit'"></app-habit-tracker>
 <app-goal [habit_name]="'sleep'"></app-goal>
 <app-note></app-note>
-<app-todo></app-todo>
+<app-todo></app-todo> -->
+<!-- <app-header></app-header> -->
+<div class="grid-container">
+    <div class="column first">Column 1</div>
+    <div class="column middle">Column 2</div>
+    <div class="column last">Column 3</div>
+</div>
+
