adding habits on home page

--- a/Turtle_/src/app/pages/habits/habits.component.html
+++ b/Turtle_/src/app/pages/habits/habits.component.html
@@ -4,7 +4,7 @@
     [(ngModel)]="habitName"
     placeholder="Place a name of new habit"
   />
-  <button (click)="addNewHabit(habitName)">Add new habit</button>
+  <button (click)="addNewHabit(habitName)">Add new</button>
 </div>
 
 <div id="habitTrackerContainer" #habitTrackerContainer></div>
