--- a/Turtle_/src/app/pages/home/home.component.html
+++ b/Turtle_/src/app/pages/home/home.component.html
@@ -8,7 +8,27 @@
 <app-todo></app-todo> -->
 <!-- <app-header></app-header> -->
 <div class="grid-container">
-    <div class="column first">Column 1</div>
+    <div class="column first">
+        <div class="row logo">
+            <img src="../../../assets/logo_turtle.png" alt="turtle">
+        </div>
+
+        <div class="row">
+            <app-habits></app-habits>
+        </div>
+
+        <div class="row habits-list">
+            <ul>
+                <li>Habit 1</li>
+                <li>Habit 2</li>
+                <li>Habit 3</li>
+            </ul>
+        </div>
+
+        <div class="row logo-text">
+            <p>Turtle</p>
+        </div>
+    </div>
     <div class="column middle">Column 2</div>
     <div class="column last">Column 3</div>
 </div>
