--- a/Turtle_/src/app/pages/habits/habits.component.css
+++ b/Turtle_/src/app/pages/habits/habits.component.css
@@ -2,18 +2,54 @@
   font-family: "Jost-regular";
   src: url(../../../assets/Jost-VariableFont_wght.ttf);
 }
+
 input{
-  width: 130px;
+  width: 140px;
+  background-color: #e0e0e0;
+  border-radius: 4px;
+  color: #1e1e1e;
+  border: 2px solid transparent;
+  outline: none;
+  border-bottom: 1px solid black;
 }
+
 input::placeholder{
   font-style: italic;
   font-size: 10px;
   padding-left: 5px;
   padding-right: 5px;
 }
+
 input:focus{
-  text-align: start;
-  font-size: 12px;
-  font-weight: 600;
-  font-style: normal;
+  font-size: 10px;
+  cursor: text;
+  border-bottom: 1px solid whitesmoke;
+}
+
+input:hover{
+  border-bottom: 1px solid white;
+}
+
+.inputName{
+  display: flex;
+  padding: 5px;
+  margin: 15px;
+  background-color:transparent;
+  width: 220px;
+  height: 20px;
+}
+
+button{
+  margin-left: 4px;
+  text-align: justify;
+  text-transform: lowercase;
+  background-color: #e0e0e0;
+  color: #1e1e1e;
+  border-radius: 4px;
+  border: 1px solid silver
+}
+button:hover{
+  background-color: #e0e0e0;
+  border-color: green;
+  color: green;
 }
