--- a/Turtle_/src/app/components/habit-tracker/habit-tracker.component.html
+++ b/Turtle_/src/app/components/habit-tracker/habit-tracker.component.html
@@ -2,19 +2,28 @@
   <div class="placeholder_for_habit">
     <div class="container" id="container">
       <div class="days" id="days">
-        <span>{{ habit_name }} {{ habit_id }}</span>
+        <span>{{ habit_name }}</span>
       </div>
-      <!--      <div class="days-grid">-->
-      <!--        @for (row of matrix.matrix; track row) {-->
-      <!--          <div class="row">-->
-      <!--            @for (cell of row; track cell) {-->
-      <!--              <div class="square">-->
-      <!--                {{ cell.day !== -1 ? cell.day : "" }}-->
-      <!--              </div>-->
-      <!--            }-->
-      <!--          </div>-->
-      <!--        }-->
-      <!--      </div>-->
+      <div class="days-grid">
+        @for (row of matrix.matrix; track row) {
+          <div class="row">
+            @for (cell of row; track cell) {
+              <div
+                class="square"
+                [ngClass]="{
+                  'checked-true': cell.checked === true,
+                  'checked-disabled': cell.checked === 'disabled',
+                  'checked-false': cell.checked === false,
+                  'checked-none': cell.day === -1,
+                }"
+                (click)="setChecked(cell.checked)"
+              >
+                {{ cell.day !== -1 ? cell.day : "" }}
+              </div>
+            }
+          </div>
+        }
+      </div>
     </div>
   </div>
 </div>
